2020-04-09  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pvm-val.c (pvm_print_val_1): Remove trailing whitespaces.

2020-04-09  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pvm.h: Note that if both NAME and VALUE are PVM_NULL in a
	struct field, the field is absent.
	* lib/pvm-val.c (pvm_sizeof): Be aware of absent fields.
	(pvm_print_val_1): Likewise.
	(pvm_elemsof): Likewise.
	(pvm_ref_struct): Return NULL if the referred field is absent.
	* lib/pkl-gen.pks (struct_constructor): Support optional fields.
	(struct_mapper): Likewise.
	(struct_field_mapper): Likewise.
	(struct_field_writer): Likewise.
	* lib/pkl-insn.def (srefia): New instruction.
	* lib/pvm.jitter (srefia): Likewise.
	* testsuite/poke.pkl/attr-length-8.pk: New test.
	* testsuite/poke.pkl/sref-3.pk: Likewise.
	* testsuite/poke.pkl/sref-4.pk: Likewise.
	* testsuite/poke.map/map-opcond-write-1.pk: Likewise.

2020-04-09  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pvm-env.c: Include string.h
	* lib/pkl-gen.c: Remove spurious XXX marks.

2020-04-09  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pkl-ast.h (PKL_AST_FUNC_NARGS): Define.
	* lib/pkl-ast.c (pkl_ast_print_1): Print the nargs attribute of
	func nodes.
	* lib/pkl-trans.c (pkl_trans1_ps_func): Count the number of formal
	arguments.
	* lib/pkl-gen.c (pkl_gen_pr_func): Do not count arguments and
	provide a hint with the number of formals to pushf.

2020-04-09  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pkl-ast.h (PKL_AST_COMP_STMT_NUMVARS): Define.
	* lib/pkl-ast.c (pkl_ast_print_1): Print the numvars attribute of
	comp_stmt nodes.
	* lib/pkl-trans.c (pkl_trans1_ps_comp_stmt): New handler.
	(pkl_phase_trans1): Register handler.
	* lib/pkl-gen.c (pkl_gen_pr_comp_stmt): Pass the number of
	variables defined in the compound statement as a hint to pushf.

2020-04-09  Jose E. Marchesi  <jemarch@gnu.org>

	* lib/pkl-insn.def (pushf): Get a numeric argument.
	* lib/pvm.jitter (pushf): Likewise.
	* lib/pvm.h (pvm_env_new): Get a `hint' argument.